added predefined html items

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
+    <form>
+      <select name="colorChooser" id="colorSelect">
+        <option value="red">Red</option>
+        <option value="green">Green</option>
+        <option value="white">White</option>
+        <option value="black">Black</option>
+      </select>
+    </form>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
