--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <option value="white">White</option>
         <option value="black">Black</option>
       </select>
+      <input type="button" onclick="removecolor()" value="Select and Remove" />
     </form>
     <script src="./assets/js/main.js"></script>
   </body>
