--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <form>
       <select name="colorChooser" id="colorSelect">
-        <option value="red" id="red">Red</option>
-        <option value="green" id="green">Green</option>
-        <option value="white" id="white">White</option>
-        <option value="black" id="black">Black</option>
+        <option>Red</option>
+        <option>Green</option>
+        <option>White</option>
+        <option>Black</option>
       </select>
       <input type="button" onclick="removecolor()" value="Select and Remove" />
     </form>
